--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-notebooks/pilot_kiva_sk.ipynb
+notebooks/.ipynb_checkpoints
 notebooks/.gitattributes
 notebooks/kiva/.ipynb_checkpoints
 notebooks/knott/.ipynb_checkpoints
-optiml/users.py
 optiml/backend/__pycache__
 optiml/pages/__pycache__
 notebooks/knot/.ipynb_checkpoints
+.DS_Store
 *.pyc
