--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -6,6 +6,7 @@ asn1crypto==1.5.1
 attrs==22.2.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
+bcrypt==4.0.1
 beautifulsoup4==4.11.1
 bleach==6.0.0
 blinker==1.5
@@ -24,6 +25,7 @@ debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
+extra-streamlit-components==0.1.56
 fastjsonschema==2.16.2
 filelock==3.9.0
 Flask==2.2.2
@@ -87,6 +89,7 @@ pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 pywin32==305
 pywinpty==2.0.10
+PyYAML==6.0
 pyzmq==25.0.0
 qtconsole==5.4.0
 QtPy==2.3.0
@@ -100,6 +103,7 @@ sniffio==1.3.0
 snowflake-connector-python==3.0.0
 soupsieve==2.3.2.post1
 streamlit==1.17.0
+streamlit-authenticator==0.1.5
 streamlit-option-menu==0.3.2
 tabulate==0.9.0
 tenacity==8.1.0
